--- a/src/app/pages/productComponent/add-product/add-product.component.html
+++ b/src/app/pages/productComponent/add-product/add-product.component.html
@@ -17,43 +17,130 @@
              </div>
         </div>
 
+      
+        <div class="form-row">
 
-        <div class="form-group">
-          <label for="inputAddress">Address</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+          <div class="col-sm-4 my-1">
+            <label>Manufacturing-Price</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <i class="fa fa-rupee"></i>
+                </div>
+              </div>
+              <input type="text"
+               class="form-control"
+               [(ngModel)]="addProduct.manufacturingPrice" name="manufacturingPrice"
+               id="inlineFormInputGroupUsername"
+               placeholder="Username">
+            </div>
+          </div>
+
+
+          <div class="col-sm-4 my-1">
+            <label>MRP-Price</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <i class="fa fa-rupee"></i>
+                </div>
+              </div>
+              <input type="text"
+               class="form-control"
+               [(ngModel)]="addProduct.mrpPrice" name="mrpPrice"
+               id="inlineFormInputGroupUsername"
+               placeholder="Username">
+            </div>
+          </div>
+
+          <div class="col-sm-4 my-1">
+            <label>SELL-Price</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <i class="fa fa-rupee"></i>
+                </div>
+              </div>
+              <input type="text"
+               class="form-control"
+               [(ngModel)]="addProduct.sellPrice" name="sellPrice"
+               id="inlineFormInputGroupUsername"
+               placeholder="Username">
+            </div>
+          </div>
+
+        </div>
+
+
+        <div class="my-1 mt-3 mb-4">
+          <label>Quantity</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text">
+                <i class="fa fa-database"></i>
+              </div>
+            </div>
+            <input type="text"
+             class="form-control"
+             [(ngModel)]="addProduct.quantity" name="quantity"
+             id="inlineFormInputGroupUsername"
+             placeholder="Quantity">
+          </div>
         </div>
         
 
+       <div class="container mb-3" id="pd-100">
+        <h5 class="p-4 text-primary">Product Description</h5>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Description</label>
+          <textarea 
+          [(ngModel)]="addProduct.description" name="description"
+          class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">SHORT-Description</label>
+          <textarea 
+          [(ngModel)]="addProduct.shortDescription" name="shortDescription"
+          class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
 
         <div class="form-group">
-          <label for="inputAddress2">Address 2</label>
-          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+          <label for="exampleFormControlTextarea1">LONG-Description</label>
+          <textarea 
+          [(ngModel)]="addProduct.longDescription" name="longDescription"
+          class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputCity">City</label>
-            <input type="text" class="form-control" id="inputCity">
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputState">State</label>
-            <select id="inputState" class="form-control">
-              <option selected>Choose...</option>
-              <option>...</option>
-            </select>
-          </div>
-          <div class="form-group col-md-2">
-            <label for="inputZip">Zip</label>
-            <input type="text" class="form-control" id="inputZip">
-          </div>
-        </div>
+       </div>
+
+
+       <div class="container mb-3" id="pd-100">
+        <h5 class="p-4 text-primary">Product Details</h5>
         <div class="form-group">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-              Check me out
-            </label>
-          </div>
+          <label for="exampleFormControlTextarea1">product Details</label>
+          <textarea 
+          [(ngModel)]="addProduct.productDetails" name="productDetails"
+          class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
+        
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Product-Long-Details</label>
+          <textarea 
+          [(ngModel)]="addProduct.productLongDetails" name="productLongDetails"
+          class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Product-Short-Details</label>
+          <textarea 
+          [(ngModel)]="addProduct.productShortDetails" name="productShortDetails"
+          class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+       </div>
+
+    
+
+
         <button type="submit" class="btn btn-primary">Sign in</button>
 
        
