--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -39,6 +39,13 @@
                 <a class="anchorUnderline" routerLink="addProduct">
                     <h5>Add Product</h5>
                 </a>
+                <a class="anchorUnderline" routerLink="showProduct">
+                    <h5>SHOW-PRODUCT</h5>
+                </a>
+
+                <a class="anchorUnderline" routerLink="linkFiles">
+                    <h5>LINKING-IMAGE</h5>
+                </a>
                
             </mat-card>
 
