--- a/src/app/pages/productComponent/upload-files-form-product/upload-files-form-product.component.html
+++ b/src/app/pages/productComponent/upload-files-form-product/upload-files-form-product.component.html
@@ -52,9 +52,9 @@
                                 <i class="fa fa-link text-primary" style="font-size:20px"></i>
                               </a>
                             </div>
-                            <div class="col-sm-4" *ngIf="checkingLinkingFile(node.fileUrl)">
-                              <a class="nav-link cursor-pointer" href="">
-                                <i class="fa fa-user-o text-danger" style="font-size:20px"></i>
+                            <div class="col-sm-4">
+                              <a class="nav-link cursor-pointer"  (click)="setThumbNail(node.bucketId)">
+                                <i class="	fa fa-file-photo-o text-danger" style="font-size:20px"></i>
                               </a>
                             </div>
                          </div>
@@ -101,8 +101,8 @@
                               </a>
                             </div>
                             <div class="col-sm-4">
-                              <a class="nav-link cursor-pointer" href="">
-                                <i class="fa fa-trash-o text-danger" style="font-size:20px"></i>
+                              <a class="nav-link cursor-pointer"  (click)="setThumbNail(node.bucketId)">
+                                <i class="	fa fa-file-photo-o text-danger" style="font-size:20px"></i>
                               </a>
                             </div>
                          </div>
