--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 
     <div class="row text-center">
         <div class="col-sm-2">
-            <h5>ROOT CATEGORY</h5>
+            <h5  class="text-primary font-weight-bold">ROOT CATEGORY</h5>
                 <mat-card  >
                     <a class="anchorUnderline" routerLink="createRootCategory">
                         <h5>Create Root Category</h5>
@@ -18,7 +18,7 @@
         </div>
 
         <div class="col-sm-2">
-            <h5>SUB CATEGORY</h5>
+            <h5 class="text-primary font-weight-bold">SUB CATEGORY</h5>
             <mat-card >
                 <a class="anchorUnderline" routerLink="createSubCategory">
                     <h5>Create Sub Category</h5>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-sm-2">
-            <h5>ADD PRODUCT</h5>
+            <h5  class="text-primary font-weight-bold">ADD PRODUCT</h5>
             <mat-card >
                 <a class="anchorUnderline" routerLink="addProduct">
                     <h5>Add Product</h5>
