--- a/src/app/pages/productComponent/upload-files-form-product/upload-files-form-product.component.html
+++ b/src/app/pages/productComponent/upload-files-form-product/upload-files-form-product.component.html
@@ -31,39 +31,73 @@
                   <div class="card-columns" >
     
                     <div *ngFor="let node of filterData; let i = index">
-                      <div *ngIf="node.imageType == 'image/jpeg' ">
+
+                      <div *ngIf="node.imageType == 'image/jpeg' && node.isLinking === 'YES'">
+                            <!-- CARD STARTING -->
                          <div class="card"  class="card" style="max-width:12rem ;">
-                          
                           <a href="#">
                             <img class="card-img-top" src="{{node.fileUrl}}" alt="Card image cap">
                           </a>
-    
-                          
-    
                       <div class="card-body p-2">
                          <div class="row mr-2">
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
                               <a  class="nav-link cursor-pointer"  (click)="deleteFileByBucketId(node.bucketId)" >
                                 <i  class="fa fa-trash-o text-danger" style="font-size:20px"></i>
                               </a>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
                               <a class="nav-link cursor-pointer"  (click)="bindFileWithProductImageUrl(node.bucketId)">
                                 <i class="fa fa-link text-primary" style="font-size:20px"></i>
                               </a>
                             </div>
-                            <div class="col-sm-4">
+                            <div class="col-sm-3">
                               <a class="nav-link cursor-pointer"  (click)="setThumbNail(node.bucketId)">
-                                <i class="	fa fa-file-photo-o text-danger" style="font-size:20px"></i>
+                                <i class="	fa fa-file-photo-o text-danger" style="font-size:20px"> </i>
+                              </a>
+                            </div>
+                            <div class="col-sm-3">
+                              <a class="nav-link cursor-pointer"  (click)="setThumbNail(node.bucketId)">
+                                <i class="	fa fa-circle Blink" style="font-size:10px;color:chartreuse ;"></i>
                               </a>
                             </div>
                          </div>
                         </div>
-    
                         </div>
+                          <!-- CARD ENDING -->
+                         </div> 
+
+
+                         <div *ngIf="node.imageType == 'image/jpeg' && node.isLinking == null">
+                          <!-- CARD STARTING -->
+                       <div class="card"  class="card" style="max-width:12rem ;">
+                        <a href="#">
+                          <img class="card-img-top" src="{{node.fileUrl}}" alt="Card image cap">
+                        </a>
+                    <div class="card-body p-2">
+                       <div class="row mr-2">
+                          <div class="col-sm-4">
+                            <a  class="nav-link cursor-pointer"  (click)="deleteFileByBucketId(node.bucketId)" >
+                              <i  class="fa fa-trash-o text-danger" style="font-size:20px"></i>
+                            </a>
+                          </div>
+                          <div class="col-sm-4">
+                            <a class="nav-link cursor-pointer"  (click)="bindFileWithProductImageUrl(node.bucketId)">
+                              <i class="fa fa-link text-primary" style="font-size:20px"></i>
+                            </a>
+                          </div>
+                          <div class="col-sm-4">
+                            <a class="nav-link cursor-pointer"  (click)="setThumbNail(node.bucketId)">
+                              <i class="	fa fa-file-photo-o text-danger" style="font-size:20px"> </i>
+                            </a>
+                          </div>
                        </div>
+                      </div>
+                      </div>
+                        <!-- CARD ENDING -->
+                       </div>
+
+
                      </div>
-    
                   </div>
                 </div>
                <!--//////// First Six ENDING column -->
