--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -51,7 +51,11 @@
 
         </div>
 
-        <div class="col-sm-2"></div>
+        <div class="col-sm-2">
+
+            <!-- <img src="http://64.227.8.158:4444/files/asd.jpg" alt="" height="200" width="200"> -->
+
+        </div>
 
         <div class="col-sm-2"></div>
 
