--- a/src/app/pages/rootCategoryComponent/upload-file-form-root-cat/upload-file-form-root-cat.component.css
+++ b/src/app/pages/rootCategoryComponent/upload-file-form-root-cat/upload-file-form-root-cat.component.css
@@ -5,3 +5,12 @@
         text-align:centre;
         
 }
+
+.Blink {
+        animation: blinker 1.5s cubic-bezier(.5, 0, 1, 1) infinite alternate;  
+    }
+    
+    @keyframes blinker {  
+      from { opacity: 1; }
+      to { opacity: 0; }
+    }
