--- a/src/app/pages/subCategoryComponent/upload-file-form-sub-cat/upload-file-form-sub-cat.component.html
+++ b/src/app/pages/subCategoryComponent/upload-file-form-sub-cat/upload-file-form-sub-cat.component.html
@@ -33,14 +33,12 @@
               <div class="card-columns" >
 
                 <div *ngFor="let node of filterData; let i = index">
-                  <div *ngIf="node.imageType == 'image/jpeg' ">
+                  <div *ngIf="node.imageType == 'image/jpeg'  && node.isLinking === 'YES' ">
                      <div class="card"  class="card" style="max-width:12rem ;">
 
                       <a href="#">
                         <img class="card-img-top" src="{{node.fileUrl}}" alt="Card image cap">
                       </a>
-
-                      
 
                   <div class="card-body p-2">
                      <div class="row mr-2">
@@ -55,8 +53,8 @@
                           </a>
                         </div>
                         <div class="col-sm-4">
-                          <a class="nav-link cursor-pointer" href="">
-                            <i class="fa fa-trash-o text-danger" style="font-size:20px"></i>
+                          <a class="nav-link cursor-pointer">
+                            <i class="	fa fa-circle Blink" style="font-size:10px;color:chartreuse ;"></i>
                           </a>
                         </div>
                      </div>
@@ -64,8 +62,42 @@
 
                     </div>
                    </div>
-                 </div>
 
+                   <!-- ELSE START -->
+
+                   <div *ngIf="node.imageType == 'image/jpeg'  && node.isLinking === null ">
+                    <div class="card"  class="card" style="max-width:12rem ;">
+
+                     <a href="#">
+                       <img class="card-img-top" src="{{node.fileUrl}}" alt="Card image cap">
+                     </a>
+
+                 <div class="card-body p-2">
+                    <div class="row mr-2">
+                       <div class="col-sm-4">
+                         <a  class="nav-link cursor-pointer"  (click)="deleteFileByBucketId(node.bucketId)" >
+                           <i  class="fa fa-trash-o text-danger" style="font-size:20px"></i>
+                         </a>
+                       </div>
+                       <div class="col-sm-4">
+                         <a class="nav-link cursor-pointer"  (click)="bindFileWithSubCategoryImageUrl(node.bucketId)">
+                           <i class="fa fa-link text-primary" style="font-size:20px"></i>
+                         </a>
+                       </div>
+                       <div class="col-sm-4">
+                        <a class="nav-link cursor-pointer">
+                          <i class="	fa fa-circle Blink" style="font-size:10px;color:red ;"></i>
+                        </a>
+                       </div>
+                    </div>
+                   </div>
+
+                   </div>
+                  </div>
+
+
+                 </div>
+                  <!-- FOR LOOP END -->
               </div>
             </div>
            <!--//////// First Six ENDING column -->
