--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -53,7 +53,18 @@
 
         <div class="col-sm-2">
 
-            <!-- <img src="http://64.227.8.158:4444/files/asd.jpg" alt="" height="200" width="200"> -->
+            <h5  class="text-primary font-weight-bold"  >BANNER</h5>
+            <mat-card >
+                <a class="anchorUnderline" routerLink="banner">
+                    <h5>Add Banner</h5>
+                </a>
+
+                <a class="anchorUnderline" routerLink="showBanner">
+                    <h5>Fetch Banner</h5>
+                </a>
+               
+            </mat-card>
+
 
         </div>
 
