REOLVED DATA F and FIX [BUGS]

--- a/src/app/pages/banner/banner/banner.component.html
+++ b/src/app/pages/banner/banner/banner.component.html
@@ -11,12 +11,16 @@
     <div class="row mt-3">
 
         <!-- STARTING -->
-        <div class="col-md-5">col-sm-6</div>
+        <div class="col-md-5">
+          <img class="banner-form-image" src="../../../../assets/form-images/form-image-1.jpg"  alt="">
+        </div>
         <!-- ENDING -->
 
 
         <!-- STARTING  -->
         <div class="col-md-7">
+
+          <h3 class="text-center mt-2 mb-5 shadow-sm banner-form-heading-color"  >BANNER-FORM</h3>
 
             <form  (ngSubmit)="createBanner()" >
                 <div class="form-row">
