--- a/src/app/pages/banner/show-banner/show-banner.component.html
+++ b/src/app/pages/banner/show-banner/show-banner.component.html
@@ -5,7 +5,7 @@
 
     <!-- STARTING TABLE -->
 
-    <table class="table table-sm table-striped" >
+    <table class="table table-sm table-striped "  >
         <thead>
           <tr >
             <th scope="col">Sn</th>
@@ -18,7 +18,7 @@
             <th scope="col">File-Url</th>
             <th scope="col">image</th>
             <th scope="col">delete</th>
-            <th scope="col">update</th>
+            <th scope="col">upload-FILE</th>
           </tr>
         </thead>
         <tbody>
@@ -48,10 +48,11 @@
             <td>
                 <div>
                  <a routerLink="/dashboard/uploadBannerFile/{{node.bannerId}}" class="text-primary" >
-                    <i  class="fa fa-pencil-square" style="font-size:24px"></i>
+                    <i  class="fa fa-camera" style="font-size:24px"></i>
                  </a>
                 </div>
              </td>
+             
           </tr>
           
         </tbody>
